fix player profile layout issue

--- a/css/player.css
+++ b/css/player.css
@@ -13,6 +13,7 @@
 
 .playerprofile {
    width: 100%;
+   height: 100%;
    font-size: 1em;
    -webkit-justify-content: center;
    justify-content: center;
@@ -32,11 +33,11 @@
    -webkit-flex-direction: row;
 }
 .player_details {
-   width: 80%;
+   width: 100%;
    height: 100%;
    display: flex;
-   flex-direction: row;
-   -webkit-flex-direction: row;
+   flex-direction: column;
+   -webkit-flex-direction: column;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-align-content: center;
@@ -191,8 +192,8 @@
 }
 */
 .player_section {
+   height: 100%;
    width: 100%;
-   margin-bottom: 1em;
 }
 
 .player_data {
@@ -206,9 +207,13 @@
    align-content: center;
    -webkit-align-items: center;
    align-items: center;
+   margin-bottom: 1em;
 }
 
 /* .pdata { width: 100%; } */
+.pdata_container {
+   width: 100%;
+}
 .pdetail {
    height: 100%;
    display: flex;
@@ -238,12 +243,14 @@
    display: flex;
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
+   text-align: left;
 }
 
 /* add players */
 .assignment-actions {
    margin-left: .5em;
    margin-right: .5em;
+   margin-bottom: 1em;
 }
 .playerattrs {
    margin-right: .5em;
@@ -252,15 +259,6 @@
 .playerattr {
    height: 100%;
    text-align: right;
-   /*
-   display: flex;
-   -webkit-justify-content: flex-end;
-   justify-content: flex-end;
-   -webkit-align-content: center;
-   align-content: center;
-   -webkit-align-items: center;
-   align-items: center;
-   */
 }
 .playerattrvalue {
    margin-bottom: 3px;
